Formatting and fixed text overlapping eachother in Erfaring page

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
-margin: 0;
-padding: 0%;
-box-sizing: border-box;
+    margin: 0;
+    padding: 0%;
+    box-sizing: border-box;
 }
 
 
@@ -25,12 +25,12 @@ body {
 }
 
 .logo {
-font-size: 25px;
-color: #fff;
-text-decoration: none;
-font-weight: 600;
-opacity: 0;
-animation: slideTop 1s ease forwards;
+    font-size: 25px;
+    color: #fff;
+    text-decoration: none;
+    font-weight: 600;
+    opacity: 0;
+    animation: slideTop 1s ease forwards;
 
 }
 
@@ -62,10 +62,11 @@ animation: slideTop 1s ease forwards;
     padding: 70px 10% 0;
 }
 
-.home-content{
+.home-content {
     max-width: 500px;
     margin-left: -30px;
 }
+
 .home-content h1 {
     font-size: 56px;
     font-weight: 700;
@@ -75,12 +76,29 @@ animation: slideTop 1s ease forwards;
     animation-delay: .7s;
 }
 
+.home-content h2 {
+    font-size: 32px;
+    font-weight: 700;
+    opacity: 0;
+    animation: slideLeft 1s ease forwards;
+    animation-delay: 1s;
+}
+
 .home-content h3 {
     font-size: 32px;
     font-weight: 700;
     opacity: 0;
     animation: slideLeft 1s ease forwards;
     animation-delay: 1s;
+}
+
+.home-content h4 {
+    font-size: 20px;
+    font-weight: 700;
+    opacity: 0;
+    animation: slideLeft 1s ease forwards;
+    animation-delay: 1s;
+    margin-right: 40px;
 }
 
 .home-content p {
@@ -136,7 +154,7 @@ animation: slideTop 1s ease forwards;
     z-index: -1;
     border-radius: 40px;
     transition: .5s ease;
-   
+
 }
 
 .btn:hover::after {
@@ -157,14 +175,14 @@ animation: slideTop 1s ease forwards;
     color: #fff;
     text-decoration: none;
     margin: 20px 0;
-    z-index: 1; 
+    z-index: 1;
 }
 
 .home-sci a:nth-child(1) {
     opacity: 0;
     animation: slideBottom 1s ease forwards;
     animation-delay: 2s;
-    
+
 }
 
 .home-sci a:nth-child(2) {
@@ -190,7 +208,7 @@ animation: slideTop 1s ease forwards;
     transition: .5s ease;
 }
 
-.home-sci a:hover::before{
+.home-sci a:hover::before {
     filter: blur(5px);
 }
 
@@ -330,12 +348,11 @@ animation: slideTop 1s ease forwards;
 }
 
 /*SKILLS SIDE*/
-.homeSkills
- {
+.homeSkills {
     width: 100%;
     height: 100vh;
-    display:flex;
-    justify-content:center;
+    display: flex;
+    justify-content: center;
     align-items: top;
     padding: 70px 10% 0;
 }
@@ -442,6 +459,7 @@ animation: slideTop 1s ease forwards;
     position: relative;
     animation: slideLeft 1.5s ease backwards;
 }
+
 .contact-right {
     position: fixed;
     flex-basis: 65%;
@@ -451,25 +469,26 @@ animation: slideTop 1s ease forwards;
     animation: slideLeft 1.5s ease forwards;
     color: #fff;
 }
-.contact-left p{
+
+.contact-left p {
     margin-top: 40px;
     font-size: 15px;
 }
 
-.contact-left p i{
+.contact-left p i {
     background: linear-gradient(#f06, #3cf);
     margin-right: 15px;
     border-radius: 10%;
     font-size: 20px;
 }
 
-.contact-left a{
+.contact-left a {
     margin-top: 40px;
     font-size: 15px;
     color: #fff;
 }
 
-.contact-left a i{
+.contact-left a i {
     background: linear-gradient(#f06, #3cf);
     margin-right: 15px;
     border-radius: 10%;
@@ -523,7 +542,7 @@ animation: slideTop 1s ease forwards;
     z-index: -1;
     border-radius: 40px;
     transition: .5s ease;
-   
+
 }
 
 .btn1:hover::after {
@@ -534,7 +553,8 @@ animation: slideTop 1s ease forwards;
     width: 50%;
 }
 
-form input, form textarea{
+form input,
+form textarea {
     width: 100%;
     border: 0;
     outline: none;
@@ -545,90 +565,90 @@ form input, form textarea{
     font-size: 18px;
     border-radius: 6px;
 }
+
 /*ANIMATIONER*/
 
 @keyframes slideTop {
-    0%{
+    0% {
         opacity: 0;
         transform: translateY(100px);
     }
 
-    100%{
+    100% {
         opacity: 1;
         transform: translateY(0);
     }
 }
 
 @keyframes slideRight {
-    0%{
+    0% {
         opacity: 0;
         transform: translateX(-100px);
     }
 
-    100%{
+    100% {
         opacity: 1;
         transform: translateX(0);
     }
 }
 
 @keyframes slideLeft {
-    0%{
+    0% {
         opacity: 0;
         transform: translateX(100px);
     }
 
-    100%{
+    100% {
         opacity: 1;
         transform: translateX(0);
     }
 }
 
 @keyframes slideBottom {
-    0%{
+    0% {
         opacity: 0;
         transform: translateY(-100px);
     }
 
-    100%{
+    100% {
         opacity: 1;
         transform: translateY(0);
     }
 }
 
 @keyframes zoomIn {
-    0%{
+    0% {
         opacity: 0;
         transform: scale(0);
     }
 
-    100%{
+    100% {
         opacity: 1;
         transform: scale(1);
     }
 }
 
 @keyframes floatImage {
-    0%{
+    0% {
         transform: translateY(-0);
     }
 
-    50%{
+    50% {
         transform: translateY(-24px);
     }
 
-    100%{
+    100% {
         transform: translateY(0);
     }
 }
 
 @keyframes circleRotate {
-    0%{
+    0% {
         transform: rotate(-0);
     }
 
-    100%{
+    100% {
         transform: rotate(360deg);
     }
 
 }
-
